##Change Log- Add your changes to this so we know what each others changed.

5/12/15 - 16:53 Removed(commented out) the default action in controller. This was calling function default action in event nothing was sent
via the action  in index(+ other pages) This was trying to connect to the users table . We dont want this.
