@@ -1,0 +1,5 @@
+ //todo  Change button colors. todo new forgot passsword page(not need for a while
+// todo change register and forgot password button colors to somthing not so blinding
+//todo reformat page so html header are in a separate file and then incude - Seperate file for headers, footers+end tags
+
+//todo remove navbar for index page (not needed)
