@@ -3,3 +3,5 @@
 5/12/15 - 16:53 Removed(commented out) the default action in controller. This was calling function default action in event nothing was sent
 via the action  in index(+ other pages) This was trying to connect to the users table . We dont want this.
 
+5/12/15 12:03 Changed login form to be Class Form-Horizontal. Made 2 Buttons called Register and forgot password.
+Register links to register page.
